templates/frontend-app/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: REPLACE_NAMESPACE
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
