templates/frontend-app/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: REPLACE_APP_NAME
  namespace: REPLACE_NAMESPACE
  labels:
    app.kubernetes.io/name: REPLACE_APP_NAME
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: REPLACE_APP_NAME
  ports:
    - name: http
      port: 80
      targetPort: http
