templates/frontend-app/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: REPLACE_APP_NAME
  namespace: REPLACE_NAMESPACE
spec:
  ingressClassName: traefik
  rules:
    - host: REPLACE_HOSTNAME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: REPLACE_APP_NAME
                port:
                  number: 80
